<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.cocos.module_login.backup.ScreenshotWarningViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/module_login_backup_wallet_title"
            android:textColor="@color/color_262A33"
            android:textSize="@dimen/sp_18" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_48"
            android:src="@drawable/no_shot_cut_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/module_login_no_shotcut_screen"
            android:textColor="@color/color_262A33"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_48"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/shape_backup_wallet_tips_bg"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/dp_8"
            android:padding="@dimen/dp_16"
            android:text="@string/module_login_no_shotcut_screen_tips"
            android:textColor="@color/color_F56151"
            android:textSize="@dimen/sp_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp_66"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@drawable/shape_create_wallet_bg"
                android:gravity="center"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                binding:onClickCommand="@{viewModel.confirmOnClickCommand}" />

        </LinearLayout>
    </LinearLayout>
</layout>