<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:br="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.cocos.module_login.password_login.PasswordLoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/module_login_register_title"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/dp_16"
                binding:onClickCommand="@{viewModel.registerClickCommand}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_20"
            android:paddingTop="@dimen/dp_33"
            android:paddingRight="@dimen/dp_20">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/module_login_login_title"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_22"
                android:typeface="@{@string/TOTAL_ASSET}" />

            <com.cocos.library_base.widget.spinner.CustomSpinner
                android:id="@+id/login_node_switch"
                android:layout_width="74dp"
                android:layout_height="@dimen/dp_28"
                android:layout_gravity="right" />

        </LinearLayout>

        <com.cocos.library_base.widget.LinearLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_34"
            android:layout_marginRight="@dimen/dp_20"
            android:orientation="vertical"
            br:borderColor="@color/color_ffd8dbe1"
            br:borderStrokeWidth="6"
            br:needLeftAndRigtBorder="false"
            br:needTopBorder="false">

            <EditText
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/module_login_account_name_hint"
                android:inputType="text"
                android:paddingTop="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_16"
                android:text="@={viewModel.accountName}"
                android:textSize="@dimen/sp_15" />

        </com.cocos.library_base.widget.LinearLinearLayout>


        <com.cocos.library_base.widget.LinearRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:orientation="vertical"
            br:borderColor="@color/color_ffd8dbe1"
            br:borderStrokeWidth="6"
            br:needLeftAndRigtBorder="false"
            br:needTopBorder="false">

            <EditText
                android:id="@+id/et_confirm_password"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/module_login_password_hint_login"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingBottom="@dimen/dp_16"
                android:text="@={viewModel.password}"
                android:textSize="@dimen/sp_15" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12">

                <ImageView
                    android:id="@+id/iv_pwd_visible"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:src="@drawable/hidden_pwd" />
            </LinearLayout>
        </com.cocos.library_base.widget.LinearRelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_44"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/shape_create_wallet_bg"
            android:gravity="center"
            android:text="@string/btn_password_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            binding:onClickCommand="@{viewModel.passwordLoginClickCommand}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_14"
            android:gravity="center_horizontal"
            android:text="@string/module_login_to_import_wallet"
            android:textColor="@color/color_4868DC"
            android:textSize="@dimen/sp_16"
            binding:onClickCommand="@{viewModel.importOnClickCommand}" />

    </LinearLayout>
</layout>