<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <data>

        <variable
            name="viewModel"
            type="com.cocos.module_login.backup.BackupWalletViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_11"
                android:background="@drawable/arrow_left_black"
                android:paddingStart="@dimen/dp_11"
                android:paddingEnd="@dimen/dp_20"
                binding:onClickCommand="@{viewModel.backOnClickCommand}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/module_login_export_key_title"
                android:textColor="@color/color_262A33"
                android:textSize="@dimen/sp_18"
                android:typeface="@{@string/TOTAL_ASSET}" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_15"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_15"
                    android:lineSpacingExtra="@dimen/dp_3"
                    android:text="@string/private_key_function_tips"
                    android:textColor="@color/color_F56151"
                    android:textSize="@dimen/sp_13" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:background="@drawable/export_key_bg"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_12"
                    android:paddingRight="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_26">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_22">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/asset_private_key_text"
                            android:textColor="@color/color_262A33"
                            android:textSize="@dimen/sp_16" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_8"
                        android:text="@string/asset_private_key_detail"
                        android:textColor="@color/color_626670"
                        android:textSize="@dimen/sp_13" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_22"
                        android:text="@={viewModel.assetPrivateKey}"
                        android:textColor="@color/color_262A33"
                        android:textSize="15sp"
                        binding:onClickCommand="@{viewModel.assetPrivateKeyCopyOnClickCommand}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@drawable/export_key_bg"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_12"
                    android:paddingRight="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_26">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_22">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/account_private_key_text"
                            android:textColor="@color/color_262A33"
                            android:textSize="@dimen/sp_16" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_8"
                        android:text="@string/account_private_key_detail"
                        android:textColor="@color/color_626670"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_22"
                        android:text="@={viewModel.accountPrivateKey}"
                        android:textColor="@color/color_262A33"
                        android:textSize="15sp"
                        binding:onClickCommand="@{viewModel.accountPrivateKeyCopyOnClickCommand}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/dp_36"
                    android:layout_weight="1"
                    android:gravity="bottom">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_50"
                        android:background="@drawable/shape_create_wallet_bg"
                        android:gravity="center"
                        android:text="@string/module_mine_btn_next"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"
                        binding:onClickCommand="@{viewModel.nextOnClickCommand}" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>